--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
    <!-- ARQUIVO CSS -->
-   <link rel="stylesheet" href="/assets/css/style.css">
-   <link rel="stylesheet" href="/assets/css/media_query.css">
+   <link rel="stylesheet" href="./assets/css/style.css">
+   <link rel="stylesheet" href="./assets/css/media_query.css">
    <title>Portfólio - Assíria</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
 <!-- PROFILE -->
       <section id="profile">
          <div class="container_foto">         
-            <img src="/assets/img/me.png" alt="uma foto de Assíria sorrindo">
+            <img src="./assets/img/me.png" alt="uma foto de Assíria sorrindo">
          </div>
          <div class="container_profile">
             <h2>Nice to meet you! <br> I'm <span class="span_name">Assíria Andreis</span>.</h2>
@@ -69,7 +69,7 @@
 
          <div class="container_projetcs">
             <div class="container_img">
-               <img src="/assets/img/todolist.img.png" alt="Imagem mostrando o To Do List pronto" class="project_img">
+               <img src="./assets/img/todolist.img.png" alt="Imagem mostrando o To Do List pronto" class="project_img">
             </div>
             <p><strong>to do list</strong></p>
             <div class="container_span">
@@ -84,7 +84,7 @@
 
          <div class="container_projetcs">
             <div class="container_img">
-               <img src="/assets/img/formulario.img.png" alt="Imagem mostrando o formulário estático pronto com HTML e CSS" class="project_img">
+               <img src="./assets/img/formulario.img.png" alt="Imagem mostrando o formulário estático pronto com HTML e CSS" class="project_img">
             </div>
             <p><strong>formulário simples</strong></p>
             <div class="container_span">
@@ -98,7 +98,7 @@
 
          <div class="container_projetcs">
             <div class="container_img">
-               <img src="/assets/img/blog.img.png" alt="Imagem mostrando o Blog pronto com 4 cards falando sobre tecnologia" class="project_img">
+               <img src="./assets/img/blog.img.png" alt="Imagem mostrando o Blog pronto com 4 cards falando sobre tecnologia" class="project_img">
             </div>
                <p><strong>Blog 4Dev</strong></p>
             <div class="container_span">
@@ -113,7 +113,7 @@
 
          <div class="container_projetcs">
             <div class="container_img">
-               <img src="/assets/img/calculadora.img.png" alt="Imagem mostrando a calculadora pronta com o histórico ao lado. Ela possui modo ligth e modo dark" class="project_img">
+               <img src="./assets/img/calculadora.img.png" alt="Imagem mostrando a calculadora pronta com o histórico ao lado. Ela possui modo ligth e modo dark" class="project_img">
             </div>
                <p><strong>Calculadora</strong></p>
             <div class="container_span">
