--- a/thankyou.html
+++ b/thankyou.html
@@ -8,13 +8,13 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
    <title>Thank You!</title>
-   <link rel="stylesheet" href="assets/css/style.css">
+   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
    <div class="obrigada">
       <h1>Obrigada pelo contato!</h1>
       <p>Retornarei o mais breve possivel ; )</p>
-      <a href="index.html">Home</a>
+      <a href="/index.html">Home</a>
    </div>
 </body>
 </html>
