--- a/index.html
+++ b/index.html
@@ -133,27 +133,25 @@
             <h2>Contact</h2>
             <p>Eu adoraria escutar suas ideias e projetos e <br>saber como posso te ajudar! Me mande uma <br>mensagem e eu retorno o mais rápido possivel.</p>
          </div>
-         <form action="https://api.staticforms.xyz/submit" method="post" class="container_form">
+         <form action="https://api.sheetmonkey.io/form/3cntwEdcuiCGkUKGxNbVMN" method="post" class="container_form">
 
             <div class="container_input">
-               <input type="text" id="name" class="input_contact" name="contato" required>
+               <input type="text" id="name" class="input_contact" name="name" required>
                <label for="text">NAME</label>
             </div>
 
             <div class="container_input">
-               <input type="email" id="email" class="input_contact" name="contato" required>
+               <input type="email" id="email" class="input_contact" name="email" required>
                <label for="email">EMAIL</label>
             </div>
 
             <div class="container_input">
-               <textarea name="message" id="message" cols="30" rows="10" name="contato" class="input_contact text_area" required></textarea>
+               <textarea name="message" id="message" cols="30" rows="10" name="message" class="input_contact" required></textarea>
                <label for="message">MESSAGE</label>
             </div>
 
             <button type="submit"><strong>send message</strong></button>
 
-            <input type="hidden" name="accessKey"value="43419e12-dc5d-4f3d-9ddc-fcda96025823">
-            <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/thankyou.html">
          </form>
          <hr class="linha_hr">
 <!-- FOOTER -->
