--- a/thankyou.html
+++ b/thankyou.html
@@ -14,7 +14,7 @@
    <div class="obrigada">
       <h1>Obrigada pelo contato!</h1>
       <p>Retornarei o mais breve possivel ; )</p>
-      <a href="/index.html">Home</a>
+      <a href="./index.html">Home</a>
    </div>
 </body>
 </html>
