--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+   <link rel="shortcut icon" href="/TarefaCSS/download20230504114118.png" type="image/x-icon">
    <!-- FONT -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -93,7 +94,7 @@
             </div>
             <br>
 
-            <a href="https://github.com/andreisissi/Formulario" target="_blank">view project</a>
+            <a href="https://andreisissi.github.io/Formulario/" target="_blank">view project</a>
          </div>
 
          <div class="container_projetcs">
