--- a/index.html
+++ b/index.html
@@ -16,64 +16,66 @@
 </head>
 <body>
    <main>
-      <nav class="container_nav_footer">
-         <h1><strong>Assíria Andreis</strong></h1>
-         <ul>
+      <nav class="nav">
+         <h1 class="nav__h1">Assíria Andreis</h1>
+         <ul class="nav__ul">
             <a href="https://github.com/andreisissi" target="_blank"><i class="fa-brands fa-github" style="color: #ffff"></i></a>
             <a href="https://www.linkedin.com/in/ass%C3%ADria-andreis-171aa1245/"><i class="fa-brands fa-linkedin" style="color: #ffff"></i></a>
          </ul>
       </nav>
 <!-- PROFILE -->
-      <section id="profile">
-         <div class="container_foto">         
+      <section class="profileSection">
+         <div class="profileSection__imgContainer">         
             <img src="./assets/img/me.png" alt="uma foto de Assíria sorrindo">
          </div>
-         <div class="container_profile">
-            <h2>Nice to meet you! <br> I'm <span class="span_name">Assíria Andreis</span>.</h2>
-            <p>Enfermeira em transição de carreira;<br> Apaixonada por desenvolvimento web;<br> Motivada pelo aprendizado. Cursando<br> Análise e Desenvolvimento de sistemas</p>
+         <div class="profileSection__apresentacaoContainer">
+            <h2 class="apresentacaoContainer__h2">Nice to meet you! <br> I'm <span class="apresentacaoContainer__spanName">Assíria Andreis</span>.</h2>
+            <p class="apresentacaoContainer__sobreMim">Enfermeira em transição de carreira;<br> Apaixonada por desenvolvimento web;<br> Motivada pelo aprendizado. Cursando<br> Análise e Desenvolvimento de sistemas</p>
             <a href="mailto:sissi.andreis@gmail.com"><strong>contact me</strong></a>
          </div>
       </section>
       <hr class="linha_hr">
-<!-- EXPERIENCES -->
-      <section id="experiences">
 
-            <div class="div_experiences" style="text-transform: uppercase;">
+<!-- EXPERIENCES -->
+      <section class="experiencesSection">
+
+            <div class="experiencesSection__experiencesContainer" style="text-transform: uppercase;">
                <i class="fa-brands fa-html5"></i><br>
-               <strong>html</strong>
-               <p>1 Year Experience</p>
+               <p class="experiencesContainer__exp">html</p>
+               <p class="experiencesContainer__expTime">1 Year Experience</p>
             </div>
 
-            <div class="div_experiences" style="text-transform: uppercase;">
+            <div class="experiencesSection__experiencesContainer" style="text-transform: uppercase;">
                <i class="fa-brands fa-css3"></i><br>
-               <strong>css</strong>
-               <p>1 Year Experience</p>
+               <p class="experiencesContainer__exp">css</p>
+               <p class="experiencesContainer__expTime">1 Year Experience</p>
             </div>
             
-            <div class="div_experiences">
+            <div class="experiencesSection__experiencesContainer">
                <i class="fa-brands fa-github"></i><br>
-               <strong>GitHub</strong>
-               <p>1 Year Experience</p>
+               <p class="experiencesContainer__exp">GitHub</p>
+               <p class="experiencesContainer__expTime">1 Year Experience</p>
             </div>
 
-            <div class="div_experiences">
+            <div class="experiencesSection__experiencesContainer">
                <i class="fa-brands fa-js"></i><br>
-               <strong>Javascript</strong>
-               <p>1 Year Experience</p>
+               <p class="experiencesContainer__exp">Javascript</p>
+               <p class="experiencesContainer__expTime">1 Year Experience</p>
             </div>
 
       </section>
       <hr class="linha_hr">
+
 <!-- PROJETCS -->
-      <section id="projects">
+      <section class="projectsSection">
          <h2>Projects</h2>
 
-         <div class="container_projetcs">
-            <div class="container_img">
-               <img src="./assets/img/todolist.img.png" alt="Imagem mostrando o To Do List pronto" class="project_img">
+         <div class="projectsSection__projectsContainer">
+            <div class="projectsContainer__containerImg">
+               <img src="./assets/img/todolist.img.png" alt="Imagem mostrando o To Do List pronto">
             </div>
             <p><strong>to do list</strong></p>
-            <div class="container_span">
+            <div class="projectsSection__containerSpan">
                <span>html</span>
                <span>css</span>
                <span>javascript</span>
@@ -83,26 +85,26 @@
             <a href="https://andreisissi.github.io/desafio_MOTOrez/" target="_blank">view project</a>
          </div>
 
-         <div class="container_projetcs">
-            <div class="container_img">
-               <img src="./assets/img/formulario.img.png" alt="Imagem mostrando o formulário estático pronto com HTML e CSS" class="project_img">
+         <div class="projectsSection__projectsContainer">
+            <div class="projectsContainer__containerImg">
+               <img src="./assets/img/formulario.img.png" alt="Imagem mostrando o formulário estático pronto com HTML e CSS">
             </div>
             <p><strong>formulário simples</strong></p>
-            <div class="container_span">
+            <div class="projectsSection__containerSpan">
                <span>html</span>
                <span>css</span>
             </div>
             <br>
 
-            <a href="https://andreisissi.github.io/Formulario/" target="_blank">view project</a>
+            <a href="https://github.com/andreisissi/Formulario" target="_blank">view project</a>
          </div>
 
-         <div class="container_projetcs">
-            <div class="container_img">
-               <img src="./assets/img/blog.img.png" alt="Imagem mostrando o Blog pronto com 4 cards falando sobre tecnologia" class="project_img">
+         <div class="projectsSection__projectsContainer">
+            <div class="projectsContainer__containerImg">
+               <img src="./assets/img/blog.img.png" alt="Imagem mostrando o Blog pronto com 4 cards falando sobre tecnologia">
             </div>
                <p><strong>Blog 4Dev</strong></p>
-            <div class="container_span">
+            <div class="projectsSection__containerSpan">
                <span>html</span>
                <span>css</span>
                <span>javascript</span>
@@ -112,12 +114,12 @@
             <a href="https://andreisissi.github.io/BlogJS/" target="_blank">view project</a>
          </div>
 
-         <div class="container_projetcs">
-            <div class="container_img">
-               <img src="./assets/img/calculadora.img.png" alt="Imagem mostrando a calculadora pronta com o histórico ao lado. Ela possui modo ligth e modo dark" class="project_img">
+         <div class="projectsSection__projectsContainer">
+            <div class="projectsContainer__containerImg">
+               <img src="./assets/img/calculadora.img.png" alt="Imagem mostrando a calculadora pronta com o histórico ao lado. Ela possui modo ligth e modo dark">
             </div>
                <p><strong>Calculadora</strong></p>
-            <div class="container_span">
+            <div class="projectsSection__containerSpan">
                <span>html</span>
                <span>css</span>
                <span>javascript</span>
@@ -128,26 +130,27 @@
          </div>
 
       </section>
+
 <!-- CONTACT -->
-      <section id="contact">
-         <div class="container_h2_contato">
+      <section class="contactSection">
+         <div class="contactSection__textContato">
             <h2>Contact</h2>
             <p>Eu adoraria escutar suas ideias e projetos e <br>saber como posso te ajudar! Me mande uma <br>mensagem e eu retorno o mais rápido possivel.</p>
          </div>
-         <form action="https://api.sheetmonkey.io/form/3cntwEdcuiCGkUKGxNbVMN" method="post" class="container_form">
+         <form action="https://api.sheetmonkey.io/form/3cntwEdcuiCGkUKGxNbVMN" method="post" class="contactSection__containerForm">
 
-            <div class="container_input">
-               <input type="text" id="name" class="input_contact" name="name" required>
+            <div class="containerForm__inputContainer">
+               <input type="text" id="name" class="inputContainer__input" name="name" required>
                <label for="text">NAME</label>
             </div>
 
-            <div class="container_input">
-               <input type="email" id="email" class="input_contact" name="email" required>
+            <div class="containerForm__inputContainer">
+               <input type="email" id="email" class="inputContainer__input" name="email" required>
                <label for="email">EMAIL</label>
             </div>
 
-            <div class="container_input">
-               <textarea name="message" id="message" cols="30" rows="10" name="message" class="input_contact" required></textarea>
+            <div class="containerForm__inputContainer">
+               <textarea name="message" id="message" cols="30" rows="10" name="message" class="inputContainer__input" required></textarea>
                <label for="message">MESSAGE</label>
             </div>
 
@@ -155,14 +158,15 @@
 
          </form>
          <hr class="linha_hr">
+
 <!-- FOOTER -->
-               <footer class="container_nav_footer">
-                  <h1><strong>Assíria Andreis</strong></h1>
-                  <ul>
-                     <a href="https://github.com/andreisissi" target="_blank"><i class="fa-brands fa-github" style="color: #ffff"></i></a>
-                     <a href="https://www.linkedin.com/in/ass%C3%ADria-andreis-171aa1245/"><i class="fa-brands fa-linkedin" style="color: #ffff"></i></a>
-                  </ul>
-               </footer>
+         <footer class="contactSection__footer">
+            <h1 class="footer__h1">Assíria Andreis</h1>
+            <ul class="footer__ul">
+               <a href="https://github.com/andreisissi" target="_blank"><i class="fa-brands fa-github" style="color: #ffff"></i></a>
+               <a href="https://www.linkedin.com/in/ass%C3%ADria-andreis-171aa1245/"><i class="fa-brands fa-linkedin" style="color: #ffff"></i></a>
+            </ul>
+         </footer>
          
       </section>
 
