--- a/thankyou.html
+++ b/thankyou.html
@@ -9,6 +9,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
    <title>Thank You!</title>
    <link rel="stylesheet" href="./assets/css/style.css">
+   <link rel="stylesheet" href="./assets/css/media_query.css">
 </head>
 <body>
    <div class="obrigada">
