--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
 
             <div class="containerForm__inputContainer">
-               <textarea name="message" id="message" cols="30" rows="10" name="message" class="inputContainer__input" required></textarea>
+               <textarea name="message" id="message" cols="30" rows="10" name="message" class="inputContainer__input inputContainer__input--message" required></textarea>
                <label for="message">MESSAGE</label>
             </div>
 
