Alt. img e link a

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
          <h1 class="nav__h1">Assíria Andreis</h1>
          <ul class="nav__ul">
             <a href="https://github.com/andreisissi" target="_blank"><i class="fa-brands fa-github" style="color: #ffff"></i></a>
-            <a href="https://www.linkedin.com/in/ass%C3%ADria-andreis-171aa1245/"><i class="fa-brands fa-linkedin" style="color: #ffff"></i></a>
+            <a href="https://www.linkedin.com/in/ass%C3%ADria-andreis-171aa1245/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ffff"></i></a>
          </ul>
       </nav>
 <!-- PROFILE -->
       <section class="profileSection">
          <div class="profileSection__imgContainer">         
-            <img src="./assets/img/me.png" alt="uma foto de Assíria sorrindo">
+            <img src="./assets/img/assiria.jpg" alt="uma foto de Assíria sorrindo">
          </div>
          <div class="profileSection__apresentacaoContainer">
             <h2 class="apresentacaoContainer__h2">Nice to meet you! <br> I'm <span class="apresentacaoContainer__spanName">Assíria Andreis</span>.</h2>
