--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
          <div class="projectsSection__projectsContainer">
             <div class="projectsContainer__containerImg">
-               <img src="./assets/img/todolist.img.png" alt="Imagem mostrando o To Do List pronto">
+               <img src="./assets/img/todolist.png" alt="Imagem mostrando o To Do List pronto">
             </div>
             <p><strong>to do list</strong></p>
             <div class="projectsSection__containerSpan">
@@ -87,7 +87,7 @@
 
          <div class="projectsSection__projectsContainer">
             <div class="projectsContainer__containerImg">
-               <img src="./assets/img/formulario.img.png" alt="Imagem mostrando o formulário estático pronto com HTML e CSS">
+               <img src="./assets/img/formulario.png" alt="Imagem mostrando o formulário estático pronto com HTML e CSS">
             </div>
             <p><strong>formulário simples</strong></p>
             <div class="projectsSection__containerSpan">
@@ -96,12 +96,12 @@
             </div>
             <br>
 
-            <a href="https://github.com/andreisissi/Formulario" target="_blank">view project</a>
+            <a href="https://andreisissi.github.io/Formulario/" target="_blank">view project</a>
          </div>
 
          <div class="projectsSection__projectsContainer">
             <div class="projectsContainer__containerImg">
-               <img src="./assets/img/blog.img.png" alt="Imagem mostrando o Blog pronto com 4 cards falando sobre tecnologia">
+               <img src="./assets/img/4dev.png" alt="Imagem mostrando o Blog pronto com 4 cards falando sobre tecnologia">
             </div>
                <p><strong>Blog 4Dev</strong></p>
             <div class="projectsSection__containerSpan">
@@ -116,7 +116,7 @@
 
          <div class="projectsSection__projectsContainer">
             <div class="projectsContainer__containerImg">
-               <img src="./assets/img/calculadora.img.png" alt="Imagem mostrando a calculadora pronta com o histórico ao lado. Ela possui modo ligth e modo dark">
+               <img src="./assets/img/calculadora.png" alt="Imagem mostrando a calculadora pronta com o histórico ao lado. Ela possui modo ligth e modo dark">
             </div>
                <p><strong>Calculadora</strong></p>
             <div class="projectsSection__containerSpan">
@@ -127,6 +127,65 @@
             <br>
 
             <a href="https://andreisissi.github.io/calculadora-/" target="_blank">view project</a>
+         </div>
+
+         <div class="projectsSection__projectsContainer">
+            <div class="projectsContainer__containerImg">
+               <img src="./assets/img/scrap.png" alt="Imagem mostrando um site chamado Ideia Scrapbook.">
+            </div>
+               <p><strong>Landing Page</strong></p>
+            <div class="projectsSection__containerSpan">
+               <span>html</span>
+               <span>css</span>
+            </div>
+            <br>
+
+            <a href="https://andreisissi.github.io/Land-Page-Scrapbook/" target="_blank">view project</a>
+         </div>
+
+         <div class="projectsSection__projectsContainer">
+            <div class="projectsContainer__containerImg">
+               <img src="./assets/img/quiz.png" alt="Imagem mostrando um Quiz com perguntas sobre Javascript">
+            </div>
+               <p><strong>Quiz</strong></p>
+            <div class="projectsSection__containerSpan">
+               <span>html</span>
+               <span>css</span>
+               <span>javascript</span>
+            </div>
+            <br>
+
+            <a href="https://andreisissi.github.io/Quiz/" target="_blank">view project</a>
+         </div>
+
+         <div class="projectsSection__projectsContainer">
+            <div class="projectsContainer__containerImg">
+               <img src="./assets/img/galeria.png" alt="Imagem mostrando uma Galeria de imagens.">
+            </div>
+               <p><strong>Galeria Dinâmica</strong></p>
+            <div class="projectsSection__containerSpan">
+               <span>html</span>
+               <span>css</span>
+               <span>javascript</span>
+            </div>
+            <br>
+
+            <a href="https://andreisissi.github.io/Galeria-Dinamica/" target="_blank">view project</a>
+         </div>
+
+         <div class="projectsSection__projectsContainer hide">
+            <div class="projectsContainer__containerImg">
+               <img src="./assets/img/galeria.png" alt="Imagem mostrando uma Galeria de imagens.">
+            </div>
+               <p><strong>Galeria Dinâmica</strong></p>
+            <div class="projectsSection__containerSpan">
+               <span>html</span>
+               <span>css</span>
+               <span>javascript</span>
+            </div>
+            <br>
+
+            <a href="https://andreisissi.github.io/Galeria-Dinamica/" target="_blank">view project</a>
          </div>
 
       </section>
@@ -141,7 +200,7 @@
 
             <div class="containerForm__inputContainer">
                <input type="text" id="name" class="inputContainer__input" name="name" required>
-               <label for="text">NAME</label>
+               <label for="name">NAME</label>
             </div>
 
             <div class="containerForm__inputContainer">
